syntax = 'proto3';

option go_package = "grpcdemo/pb";
option csharp_namespace = "Messages";

message Employee {
    int32 id = 1;
    int32 badgeNumber = 2;
    string first_name = 3;
    string last_name = 4;
    float vacationAccrualRate = 5;
    float vacationAccrued = 6;
    string name = 7;
    string email = 8;
}

message User {
    int32 id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string password = 5;
    string contact = 6;
    string status = 7;
}

message GetAllRequest {}

message GetByBadgeNumberRequest {
    int32 badgeNumber = 1;
}

message EmployeeRequest {
    Employee employee = 1;
}

message UserResponse {
    User user = 1;
}

message EmployeeResponse {
    Employee employee = 1;
}

message AddPhotoRequest {
    bytes data = 1;
}

message AddPhotoResponse {
    bool isOk = 1;
}

service EmployeeService {
    rpc GetByBadgeNumber(GetByBadgeNumberRequest) returns (EmployeeResponse);
    rpc GetAll(GetAllRequest) returns (stream UserResponse);
    rpc Save(EmployeeRequest) returns (EmployeeResponse);
    rpc SaveAll(stream EmployeeRequest) returns (stream EmployeeResponse);
    rpc AddPhoto(stream AddPhotoRequest) returns (AddPhotoResponse);
}